@@ -80,9 +80,9 @@ verb
 ggg *}}.
 '],
 ['nested_in_sc',
-'@sc{@sc{aaa @~n @aa{} @~{@aa{}} @footnote{In footnote}, @abbr{ABr, expl}, 
+'@sc{@sc{aaa @~n @aa{} @TeX{} @~{@aa{}} @footnote{In footnote}, @abbr{ABr, expl}, 
 @verb{:in verb:}}}
-'],
+', {'test_formats' => ['docbook']}],
 ['ref_in_style_command', '@samp{@ref{(manula)other node}}.'],
 ['uref_in_ref',
 '@ref{(file)node, cross ref with uref @uref{href://http/myhost.com/index.html,uref1}, title with uref2 @uref{href://http/myhost.com/index2.html,uref2}, info file with uref3 @uref{href://http/myhost.com/index3.html,uref3}, printed manual with uref4 @uref{href://http/myhost.com/index4.html,uref4}}
