@@ -1794,7 +1794,7 @@ $result_converted{'docbook'}->{'some_at_commands_in_ref_nodes'} = '
 
 </chapter>
 <chapter label="1" id="A-SC-_00d1-_00c5-TeX-node-_00ef-_00ef-_1e14-_0142-_1e08-_00a1">
-<title>A sc node &#239; &#239; &#274;` &#322; &#262;, &#161;</title>
+<title>A SC node &#239; &#239; &#274;` &#322; &#262;, &#161;</title>
 
 <para>see .
 </para></chapter>
