@@ -603,7 +603,7 @@ $result_converted{'xml'}->{'commands'} = '<para>&arobase; &tex; <spacecmd type="
 $result_converted{'docbook'}->{'commands'} = '<para>@ &tex; &#160;&#235; &#238; &#227; &#229;
 File &#8594; Open.
 <ulink url="mailto:a">b</ulink> <literal>code --- -- \'\' ``</literal>
-&#8212; &#8211; &#8221; &#8220;. small caps.
+&#8212; &#8211; &#8221; &#8220;. SMALL CAPS.
 </para>
 <indexterm role="cp"><primary>index entry &#8220;in text&#8221; &latex;</primary></indexterm>
 
