@@ -1,3 +1,10 @@
+2014-10-27  Patrice Dumas  <pertusus@free.fr>
+
+	* Texinfo/Convert/DocBook.pm (upper_case_style_commands): use
+	a context of 'upper_case' to track situation where upper casing
+	of text should be done instead of upper-casing already converted
+	output.
+
 2014-10-26  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/info-utils.c (scan_reference_marker) Return value says 
